k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-html-service
spec:
  selector:
    app: static-html
  ports:
    - port: 80
      targetPort: 3000
