k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-html-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-html-service
                port:
                  number: 80
          - path: /hello1
            pathType: Prefix
            backend:
              service:
                name: static-html-service
                port:
                  number: 80
          - path: /hello2
            pathType: Prefix
            backend:
              service:
                name: static-html-service
                port:
                  number: 80
          - path: /hello3
            pathType: Prefix
            backend:
              service:
                name: static-html-service
                port:
                  number: 80
